docs/version-1.28/modules/en/pages/reference/artifacts.adoc
include::partial$variables.adoc[]
:sidebar_label: Artifacts
:sidebar_position: 20
:title: Kubewarden artifacts
:description: Learn how to verify Kubewarden artifacts with our tutorial, which includes tools for verifying OCI images and instructions on using them.
:keywords: [artifacts, support, airgap, images]
:doc-persona: [kubewarden-operator]
:doc-type: [reference]
:doc-topic: [operator-manual, artifacts, registry, images]

= {title}
:revdate: 2025-07-09
:page-revdate: {revdate}

== Verifying Kubewarden

There is a tutorial on xref:/tutorials/verifying-kubewarden.adoc[verifying
Kubewarden] demonstrating how to verify Kubewarden artifacts.

== Binaries

Our `kwctl` CLI tool is published via https://github.com/kubewarden/kwctl/releases[GitHub releases].

== OCI artifacts

For Open Container Initiative (OCI) artifacts, the project publishes everything
in `ghcr.io` under https://github.com/orgs/kubewarden/packages.

- https://github.com/orgs/kubewarden/packages/policies[`kubewarden/packages/policies/*`]
  are the policy Wasm OCI artifacts.
- https://github.com/orgs/kubewarden/packages/charts[`kubewarden/packages/charts/*`]
  are the Helm charts as OCI artifacts. They follow SLSA standards.
- the container images published as OCI images: `kubewarden-controller`, `policy-server`, `audit-scanner`, `kubectl`.
- there's also `packages/tests/*` containing artifacts used in e2e tests.

== Helm charts via HTTPS

Kubewarden publishes Helm charts in the Helm chart HTTPS repository at
https://charts.kubewarden.io. They're without SLSA, or signatures, but this
type of Helm repository provides searching.
